# commonapi_ex

./: README.md
demo/HelloBasic/: CMakeLists.txt
demo/HelloBasic/Config /: vsomeip-client.json  vsomeip-server.json
demo/HelloBasic/SRC/: Client.cpp  HelloworldStubImpl.hpp  Server.cpp
demo/HelloBasic/fidl/: hello.fdepl  hello.fidl
demo/HelloBasic/fidl/src-gen/v1/ayman/examples/: Hello.hpp  HelloProxy.hpp  HelloProxyBase.hpp  HelloSomeIPCatalog.json  HelloSomeIPDeployment.cpp  HelloSomeIPDeployment.hpp  HelloSomeIPProxy.cpp  HelloSomeIPProxy.hpp  HelloSomeIPStubAdapter.cpp  HelloSomeIPStubAdapter.hpp  HelloStub.hpp  HelloStubDefault.hpp
